[metadata]
name = k-samplers
version = 0.0.1
author = Katherine Crowson
author_email = crowsonkb@gmail.com
maintainer = Zion English
maintainer_email = zion.m.english@gmail.com
url = https://github.com/nousr/k-samplers
description = Samplers from crowsonkb/k-diffusion
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires =
    scipy
    torch
    torchdiffeq
    torchvision
    tqdm
